[gd_scene load_steps=4 format=3 uid="uid://c7856uknhdgf0"]

[ext_resource type="Script" path="res://Scenes/Dialog/dialog_box.gd" id="1_g0vab"]
[ext_resource type="Texture2D" uid="uid://cmx0gxbgnluvx" path="res://Assets/Portraits/9patch (2).png" id="2_ju4c3"]
[ext_resource type="Texture2D" uid="uid://dlv1gjucqm57h" path="res://Assets/Portraits/PlaceholderPortrait.png" id="3_ovanb"]

[node name="DialogBox" type="CanvasLayer"]
follow_viewport_scale = 0.001
script = ExtResource("1_g0vab")

[node name="DialogBoxBackground" type="NinePatchRect" parent="."]
visible = false
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 14.0
offset_top = 154.0
offset_right = -17.0
offset_bottom = 312.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ju4c3")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="NpcItems" type="Control" parent="DialogBoxBackground"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Portrait" type="TextureRect" parent="DialogBoxBackground/NpcItems"]
layout_mode = 2
offset_left = 988.0
offset_top = 37.0
offset_right = 1115.0
offset_bottom = 158.0
size_flags_horizontal = 8
texture = ExtResource("3_ovanb")
expand_mode = 2
stretch_mode = 4

[node name="Name" type="RichTextLabel" parent="DialogBoxBackground/NpcItems"]
layout_mode = 2
offset_left = 975.0
offset_right = 1121.0
offset_bottom = 36.0
theme_override_font_sizes/normal_font_size = 24
text = "Name"

[node name="Text" type="RichTextLabel" parent="DialogBoxBackground/NpcItems"]
layout_mode = 2
offset_left = 8.0
offset_top = 7.0
offset_right = 969.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
text = "awdawdad"

[node name="PlayerItems" type="Control" parent="DialogBoxBackground"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Portrait" type="TextureRect" parent="DialogBoxBackground/PlayerItems"]
layout_mode = 2
offset_left = 6.0
offset_top = 37.0
offset_right = 133.0
offset_bottom = 158.0
size_flags_horizontal = 8
texture = ExtResource("3_ovanb")
expand_mode = 2
stretch_mode = 4

[node name="Name" type="RichTextLabel" parent="DialogBoxBackground/PlayerItems"]
layout_mode = 2
offset_left = 6.0
offset_right = 152.0
offset_bottom = 36.0
theme_override_font_sizes/normal_font_size = 24
text = "Name"

[node name="Text" type="RichTextLabel" parent="DialogBoxBackground/PlayerItems"]
layout_mode = 2
offset_left = 157.0
offset_top = 7.0
offset_right = 1118.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
text = "awdawdad"

[node name="OtherItems" type="Control" parent="DialogBoxBackground"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Text" type="RichTextLabel" parent="DialogBoxBackground/OtherItems"]
layout_mode = 2
offset_left = 8.0
offset_top = 7.0
offset_right = 1113.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
text = "awdawdad"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
